<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/data_welcome_message"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/data_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/welcome_message"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/data_lastname"
        android:hint="@string/data_name_hint_text" />

    <EditText
        android:id="@+id/data_lastname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/data_name"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/welcome_message"
        android:hint="@string/data_lastname_hint_text" />

    <EditText
        android:id="@+id/data_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data_name"
        android:hint="@string/data_address_hint_text" />

    <Button
        android:id="@+id/data_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/data_address"
        android:text="@string/data_save_button_text" />

</RelativeLayout>